# subtract-cloud

./: README.md
Backend/: .env  .gitignore  context.md  example.env  pyproject.toml  requirements.txt  sql_app.db
Backend/app/: config.py  database.py  main.py
Backend/app/models/: __init__.py  item.py  order.py  shipment.py
Backend/app/routes/: __init__.py  items.py  orders.py  shipments.py
