[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-sqlmodel-api"
version = "0.1.0"
description = "FastAPI backend with SQLModel"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.103.1",
    "sqlmodel>=0.0.8",
    "uvicorn>=0.23.2",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.1.0",
    "isort>=5.12.0",
]